# numerical-methods-library

./: CMakeLists.txt  README.md  main.cpp
data/: dane_H.txt  dane_N.txt  interpolacja_gr_1_INO.txt  interpolacja_wynik.csv
examples/: example_LU_lab4.cpp  example_approximation_lab8.cpp  example_gauss_lab5.cpp  example_integration_lab6.cpp  example_integration_lab7.cpp  example_interpolation_lab2.cpp  example_interpolation_lab3.cpp  example_nonlinear_lab11.cpp  example_nonlinear_lab12.cpp  example_ode_lab10.cpp  example_ode_lab9.cpp
include/: LU_lab4.hpp  approximation_lab8.hpp  gauss_lab5.hpp  integration_lab6.hpp  integration_lab7.hpp  interpolation_lab2.hpp  interpolation_lab3.hpp  nonlinear_lab11.hpp  nonlinear_lab12.hpp  ode_lab10.hpp  ode_lab9.hpp
src/: LU_lab4.cpp  approximation_lab8.cpp  gauss_lab5.cpp  integration_lab6.cpp  integration_lab7.cpp  interpolation_lab2.cpp  interpolation_lab3.cpp  nonlinear_lab11.cpp  nonlinear_lab12.cpp  ode_lab10.cpp  ode_lab9.cpp
tests/: test_LU_lab4.cpp  test_approximation_lab8.cpp  test_gauss_lab5.cpp  test_integration_lab6.cpp  test_integration_lab7.cpp  test_interpolation_lab2.cpp  test_interpolation_lab3.cpp  test_nonlinear_lab11.cpp  test_nonlinear_lab12.cpp  test_ode_lab10.cpp  test_ode_lab9.cpp
